--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "analyze": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "gulp-concat": "2.6.0",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "2.0.0",
     "gulp-less": "3.0.3",
     "gulp-less-reporter": "0.0.2",
