--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipeline-compile-less",
-  "version": "0.2.0",
+  "version": "0.3.0-SNAPSHOT",
   "description": "Gulp pipeline to compile LESS files",
   "author": "Juan P. Osorio <jposorio@kenzan.com> (https://github.com/jpoo90)",
   "contributors": [
