set registry url

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "preferGlobal": false,
   "private": false,
   "publishConfig": {
-    "registry": ""
+    "registry": "https://registry.npmjs.org/"
   },
   "engines": {
     "node": ">=0.10.3",
