--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipeline-compile-less",
-  "version": "0.4.0-SNAPSHOT",
+  "version": "0.4.0",
   "description": "Gulp pipeline to compile LESS files",
   "author": "Juan P. Osorio <jposorio@kenzan.com> (https://github.com/jpoo90)",
   "contributors": [
@@ -45,12 +45,12 @@
     "gulp-util": "3.0.7",
     "lazypipe": "1.0.1",
     "less-plugin-autoprefix": "1.5.1",
-    "pipeline-handyman": "git+ssh://git@github.com/kenzanlabs/pipeline-handyman.git#0.2.0"
+    "pipeline-handyman": "0.3.0"
   },
   "devDependencies": {
     "gulp": "3.9.0",
-    "pipeline-test-node": "git+ssh://git@github.com/kenzanlabs/pipeline-test-node.git#0.3.0",
-    "pipeline-validate-js": "git+ssh://git@github.com/kenzanlabs/pipeline-validate-js.git#0.2.0",
+    "pipeline-test-node": "0.4.0",
+    "pipeline-validate-js": "0.3.0",
     "stream-assert": "2.0.3"
   }
 }
